Fix: Buy me a coffee button scrolls with page on mobile

--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ body::before {
 }
 
 .bmc-top-right {
-  position: fixed;
+  position: absolute;
   top: 16px;
   right: 16px;
   z-index: 20;
